[package]

name = "googl"
version = "0.0.2"
authors = ["Peter Atashian <retep998@gmail.com>"]
description = "A simple interface to the Google URL Shortener API."
documentation = "http://retep998.github.io/googl-rs/googl/"
repository = "https://github.com/retep998/googl-rs"
readme = "README.md"
keywords = ["Google", "API", "URL", "Shortener"]
license = "MIT"

[dependencies]
hyper = "*"
url = "*"
rustc-serialize = "*"
