[package]
name = "googl"
version = "0.1.0"
authors = ["Peter Atashian <retep998@gmail.com>"]
description = "A simple interface to the Google URL Shortener API."
documentation = "https://docs.rs/googl/"
repository = "https://github.com/retep998/googl-rs"
readme = "README.md"
keywords = ["google", "url", "shortener"]
license = "MIT/Apache-2.0"

[dependencies]
hyper = "0.10"
hyper-native-tls = "0.2"
rustc-serialize = "0.3"
url = "1.4"
